# zundamotion

./: .gitignore  AGENT.md  AGENTS.md  AI_README.md  LICENSE  README.md  TODO.md  build-manifest.json  feature.md  index.html  memo.md  pyproject.toml  remove_bg_ai.py  requirements.txt  source-commit.txt  task.md  tasks.md
.devcontainer/: .env  .env.example  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  cline_mcp_settings.json  devcontainer.json  docker-compose.gpu.yml  docker-compose.voicevox-gpu.yml  docker-compose.yml  requirements.txt  runtime.lock.json  setup-mcp.sh
assets/: ATTRIBUTION.md
categories/: audio.html  character.html  getting-started.html  output.html  visual.html
colab/: zundamotion.ipynb
demos/: CHARACTER_STYLE.md  SUBTITLE_STYLE.md  character-move.yaml  insert-video-speed.yaml  transition.yaml  voicevox.yaml
docs/: AI_README.md  README.md  features.md  issues_pending.md  memo.md  script_samples.md  tasks.md  tasks_complete.md  tasks_oss_release.md  user_simple_plugin.md
examples/: tts.py
features/: background-pan-zoom.html  bgm-control.html  character-basic.html  character-move.html  insert-video-speed.html  minimal.html  output-shorts.html  overlay-compositing.html  subtitle.html  transition.html  voicevox.html
scripts/: benchmark_cpu_gpu.py  benchmark_perf_summary.yaml  benchmark_short_render.yaml  benchmark_voice_cache_reuse.yaml  build_runtime_images.py  check_runtime_lock.py  check_runtime_updates.py  check_runtime_versions.py  copetan_all_expressions.yaml  engy_all_expressions.yaml  enter_demo.yaml  export_runtime_env.py  gen_speedlines.py  install_locked_ffmpeg.py  refactor_validation_check.yaml  runtime_lock.py  sample.yaml  sample_badge.yaml  sample_bg_shake.yaml  sample_bgm.yaml  sample_char_bob.yaml  sample_char_shake.yaml  sample_char_sway.yaml  sample_character_color_filter.yaml  sample_character_enter.yaml  sample_character_flip.yaml  sample_character_move.yaml  sample_effects.yaml  sample_effects_registry.yaml  sample_filters.yaml  sample_image_layers.yaml  sample_include_vars.yaml  sample_markdown.md  sample_overlay_blink.yaml  sample_overlay_static_image_effect.yaml  sample_registry_smoke.yaml  sample_screen_shake.yaml  (+22 more)
(+266 files in other folders)
